<resources>
    <string name="app_name">Weather</string>
    <string name="please_type_area">地名を入力して下さい</string>
    <string name="menu_search">検索</string>
    <string name="history">検索履歴</string>
    <string name="search_result">検索結果</string>
    <string name="select_area">市町村から選択する</string>
    <string name="area">地方</string>
    <string name="prefecture">都道府県</string>
    <string name="city">市町村</string>
    <string name="current_location">現在地の天気を見る</string>
    <string name="today">今日</string>
    <string name="sunday">日</string>
    <string name="monday">月</string>
    <string name="tuesday">火</string>
    <string name="wednesday">水</string>
    <string name="thursday">木</string>
    <string name="friday">金</string>
    <string name="saturday">土</string>
    <string name="introduction_title">ダウンロードありがとうございます!</string>
    <string name="introduction_content">天気が知りたい地名を入力して下さい</string>
</resources>