<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@android:color/white">

    <RelativeLayout android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp">

        <TextView android:id="@+id/calendar_date_display"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_centerVertical="true"
                  android:gravity="center"
                  android:textAppearance="@android:style/TextAppearance.Medium"
                  android:textColor="#222222"
                  android:text="current date"/>

    </RelativeLayout>

    <LinearLayout android:id="@+id/calendar_header"
                  android:layout_width="match_parent"
                  android:layout_height="40dp"
                  android:gravity="center_vertical"
                  android:orientation="horizontal">

        <TextView android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:gravity="center_horizontal"
                  android:textColor="#222222"
                  android:text="@string/sunday"/>

        <TextView android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:gravity="center_horizontal"
                  android:textColor="#222222"
                  android:text="@string/monday"/>

        <TextView android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:gravity="center_horizontal"
                  android:textColor="#222222"
                  android:text="@string/tuesday"/>

        <TextView android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:gravity="center_horizontal"
                  android:textColor="#222222"
                  android:text="@string/wednesday"/>

        <TextView android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:gravity="center_horizontal"
                  android:textColor="#222222"
                  android:text="@string/thursday"/>

        <TextView android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:gravity="center_horizontal"
                  android:textColor="#222222"
                  android:text="@string/friday"/>

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:textColor="#222222"
                android:text="@string/saturday"/>

    </LinearLayout>

    <GridView android:id="@+id/calendar_grid"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:numColumns="7"/>

</LinearLayout>